[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgbm2vhdl"
version = "0.0.2"
authors = [
  { name="Tomas Martinek", email="martinek@cesnet.cz" },
]
description = "Translation of LightGBM model to VHDL"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
