[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lgbm2vhdl"
version = "0.0.2"
authors = [
  { name="Tomas Martinek", email="martinek@cesnet.cz" },
]
description = "Translation of LightGBM model to VHDL"
readme = "README.md"
keywords = [
  "traffic classification",
  "machine learning",
  "LightGBM",
  "VHDL"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "lightgbm",
  "fxpmath"
]
[project.urls]
"Homepage" = "https://github.com/CESNET/lgbm2vhdl"
"Bug Tracker" = "https://github.com/CESNET/lgbm2vhdl/issues"